--- a/app/assets/stylesheets/maquina_components.css
+++ b/app/assets/stylesheets/maquina_components.css
@@ -163,8 +163,6 @@
   font-size: 0.875rem;
   /* text-sm */
   font-weight: 500;
-  /* font-medium */
-  height: 2.25rem;
   /* h-9 */
   padding: 0.5rem 1rem;
   /* px-4 py-2 */
@@ -207,7 +205,7 @@
 }
 
 .form-input {
-  @apply flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm;
+  @apply h-10 flex w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm;
 }
 
 .form-select {
