--- a/app/assets/stylesheets/maquina_components.css
+++ b/app/assets/stylesheets/maquina_components.css
@@ -176,3 +176,29 @@
     hover:text-accent-foreground dark:bg-input/30 dark:border-input
     dark:hover:bg-input/50 size-8 group-data-[collapsible=icon]:opacity-0;
 }
+
+/* Sidebar */
+
+.sidebar-primary-button {
+  @apply flex w-full items-center gap-2 overflow-hidden rounded-md p-2
+    text-left outline-hidden ring-sidebar-ring transition-[width,height,padding]
+    focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50
+    group-has-data-[sidebar=menu-action]/menu-item:pr-8
+    aria-disabled:pointer-events-none aria-disabled:opacity-50
+    group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2!
+    [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 h-8 text-sm
+    bg-primary text-primary-foreground hover:bg-primary/90
+    hover:text-primary-foreground min-w-8 duration-200 ease-linear;
+}
+
+.sidebar-outline-button {
+  @apply inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md
+    text-sm font-medium transition-all disabled:pointer-events-none
+    disabled:opacity-50 [&_svg]:pointer-events-none
+    [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none
+    focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px]
+    aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40
+    aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent
+    hover:text-accent-foreground dark:bg-input/30 dark:border-input
+    dark:hover:bg-input/50 size-8 group-data-[collapsible=icon]:opacity-0;
+}
