--- a/app/assets/tailwind/maquina_components_engine/engine.css
+++ b/app/assets/tailwind/maquina_components_engine/engine.css
@@ -4,8 +4,10 @@
   @import "../../stylesheets/alert.css";
   @import "../../stylesheets/badge.css";
   @import "../../stylesheets/breadcrumbs.css";
+  @import "../../stylesheets/calendar.css";
   @import "../../stylesheets/card.css";
   @import "../../stylesheets/combobox.css";
+  @import "../../stylesheets/date_picker.css";
   @import "../../stylesheets/dropdown_menu.css";
   @import "../../stylesheets/empty.css";
   @import "../../stylesheets/form.css";
