--- a/app/views/components/_calendar.html.erb
+++ b/app/views/components/_calendar.html.erb
@@ -1,20 +1,4 @@
-<%# locals: (
-  selected: nil,
-  selected_end: nil,
-  month: nil,
-  year: nil,
-  mode: :single,
-  min_date: nil,
-  max_date: nil,
-  disabled_dates: [],
-  show_outside_days: true,
-  week_starts_on: :sunday,
-  cell_size: nil,
-  input_name: nil,
-  input_name_end: nil,
-  css_classes: "",
-  **html_options
-) %>
+<%# locals: (selected: nil, selected_end: nil, month: nil, year: nil, mode: :single, min_date: nil, max_date: nil, disabled_dates: [], show_outside_days: true, week_starts_on: :sunday, cell_size: nil, input_name: nil, input_name_end: nil, css_classes: "", **html_options) %>
 <%
   # Parse selected dates
   selected_date = case selected
