Fix preview templates to match component APIs
- breadcrumbs: use href: instead of url:
- pagination: use href: instead of url:, use block content
- toggle_group: use :grid icon instead of :layout_grid

--- a/test/dummy/app/views/previews/toggle_group/default.html.erb
+++ b/test/dummy/app/views/previews/toggle_group/default.html.erb
@@ -33,7 +33,7 @@
         <%= icon_for :list, class: "size-4" %>
       <% end %>
       <%= render "components/toggle_group/item", value: "grid", aria_label: "Grid view" do %>
-        <%= icon_for :layout_grid, class: "size-4" %>
+        <%= icon_for :grid, class: "size-4" %>
       <% end %>
     <% end %>
   <% end %>
