--- a/test/dummy/app/views/previews/breadcrumbs/default.html.erb
+++ b/test/dummy/app/views/previews/breadcrumbs/default.html.erb
@@ -1,11 +1,11 @@
 <%= render "components/breadcrumbs" do %>
   <%= render "components/breadcrumbs/list" do %>
     <%= render "components/breadcrumbs/item" do %>
-      <%= render "components/breadcrumbs/link", url: "#" do %>Home<% end %>
+      <%= render "components/breadcrumbs/link", href: "#" do %>Home<% end %>
     <% end %>
     <%= render "components/breadcrumbs/separator" %>
     <%= render "components/breadcrumbs/item" do %>
-      <%= render "components/breadcrumbs/link", url: "#" do %>Components<% end %>
+      <%= render "components/breadcrumbs/link", href: "#" do %>Components<% end %>
     <% end %>
     <%= render "components/breadcrumbs/separator" %>
     <%= render "components/breadcrumbs/item" do %>
