--- a/test/dummy/app/views/previews/pagination/default.html.erb
+++ b/test/dummy/app/views/previews/pagination/default.html.erb
@@ -1,22 +1,22 @@
 <%= render "components/pagination" do %>
   <%= render "components/pagination/content" do %>
     <%= render "components/pagination/item" do %>
-      <%= render "components/pagination/previous", url: "#" %>
+      <%= render "components/pagination/previous", href: "#" %>
     <% end %>
     <%= render "components/pagination/item" do %>
-      <%= render "components/pagination/link", url: "#", page: 1 %>
+      <%= render "components/pagination/link", href: "#" do %>1<% end %>
     <% end %>
     <%= render "components/pagination/item" do %>
-      <%= render "components/pagination/link", url: "#", page: 2, active: true %>
+      <%= render "components/pagination/link", href: "#", active: true do %>2<% end %>
     <% end %>
     <%= render "components/pagination/item" do %>
-      <%= render "components/pagination/link", url: "#", page: 3 %>
+      <%= render "components/pagination/link", href: "#" do %>3<% end %>
     <% end %>
     <%= render "components/pagination/item" do %>
       <%= render "components/pagination/ellipsis" %>
     <% end %>
     <%= render "components/pagination/item" do %>
-      <%= render "components/pagination/next", url: "#" %>
+      <%= render "components/pagination/next", href: "#" %>
     <% end %>
   <% end %>
 <% end %>
