--- a/test/dummy/app/views/previews/empty/default.html.erb
+++ b/test/dummy/app/views/previews/empty/default.html.erb
@@ -1,16 +1,9 @@
 <%= preview_container width: :lg do %>
   <%= render "components/empty" do %>
-    <%= render "components/empty/media" do %>
-      <%= icon_for :inbox, class: "size-12" %>
-    <% end %>
     <%= render "components/empty/header" do %>
-      <%= render "components/empty/title", text: "No results found" %>
-      <%= render "components/empty/description", text: "Try adjusting your search or filter to find what you're looking for." %>
-    <% end %>
-    <%= render "components/empty/content" do %>
-      <button data-component="button" data-variant="primary">
-        Clear filters
-      </button>
+      <%= render "components/empty/media", icon: :inbox %>
+      <%= render "components/empty/title", text: "No messages" %>
+      <%= render "components/empty/description", text: "Messages you receive will appear here." %>
     <% end %>
   <% end %>
 <% end %>
