--- a/app/views/components/sidebar/_trigger.html.erb
+++ b/app/views/components/sidebar/_trigger.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (icon_name:, css_classes: "", **html_options) %>
+<%# locals: (icon_name: :panel_left, css_classes: "", **html_options) %>
 <% merged_data = (html_options.delete(:data) || {}).merge(
     sidebar_part: :trigger,
     controller: "sidebar-trigger",
