Fix/set default icon for trigger (#7)
* Fix sidebar/trigger missing default for icon_name

Set icon_name: :left_panel as default to prevent ActionView::StrictLocalsError
when using the component without the parameter. Added Trigger section to
documentation with parameter table.

--- a/app/views/components/sidebar/_trigger.html.erb
+++ b/app/views/components/sidebar/_trigger.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (icon_name:, css_classes: "", **html_options) %>
+<%# locals: (icon_name: :left_panel, css_classes: "", **html_options) %>
 <% merged_data = (html_options.delete(:data) || {}).merge(
     sidebar_part: :trigger,
     controller: "sidebar-trigger",
