--- a/app/views/components/_dropdown_menu.html.erb
+++ b/app/views/components/_dropdown_menu.html.erb
@@ -1,8 +1,9 @@
-<%# locals: (css_classes: "", **html_options) %>
+<%# locals: (auto_close: false, css_classes: "", **html_options) %>
 <% merged_data = (html_options.delete(:data) || {}).merge(
     component: "dropdown-menu",
     controller: "dropdown-menu"
   ) %>
+<% merged_data["dropdown-menu-auto-close-value"] = true if auto_close %>
 
 <%= content_tag :div, class: css_classes.presence, data: merged_data, **html_options do %>
   <%= yield %>
