--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -275,8 +275,7 @@
     <% end %>
 
     <%# Toast notifications container %>
-    <%= render "components/toaster", position: :bottom_right do %>
-      <%= toast_flash_messages %>
-    <% end %>
+    <%= render "components/toaster", position: :bottom_right,
+          content: toast_flash_messages %>
   </body>
 </html>
