--- a/app/views/components/combobox/_label.html.erb
+++ b/app/views/components/combobox/_label.html.erb
@@ -1,8 +1,8 @@
-<%# locals: (text: nil, css_classes: "", **html_options) %>
+<%# locals: (text: nil, content: nil, css_classes: "", **html_options) %>
 <% merged_data = (html_options.delete(:data) || {}).merge(
     combobox_part: "label"
   ) %>
 
 <%= content_tag :div, class: css_classes.presence, data: merged_data, **html_options do %>
-  <%= text || yield %>
+  <%= text || content %>
 <% end %>
